@@ -1,3 +1,7 @@
+Wed Aug 15 17:22:19 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
+
+	* signal/_signal.s (__seterr): Prevent corruption of v5.
+
 Wed Aug 15 15:25:34 2001  Nick Burrett  <nick.burrett@btinternet.com>
 
 	* tmpfile.c (tmpfile): Fix logic error with the inlined fcntl.
